# raspi-digistat

./: .gitignore  Dockerfile  README.md  config.schema.json  package-lock.json  package.json  requirements.txt  setup.cfg
app/: connect.py
src/: index.ts  platform.ts  platformAccessory.ts  settings.ts
