[metadata]
name = raspidigistat-simonsolts
version = 0.0.1
author = Simon Solts
author_email = globule.bound0q@icloud.com
description = A package to control the Drayton Bluetooth RF902 Digistat via Raspberry Pi
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/simonsolts/raspi-digistat
project_urls =
    Bug Tracker = https://github.com/simonsolts/raspi-digistat/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src